[gd_scene load_steps=3 format=3 uid="uid://di2jnvafjx224"]

[ext_resource type="Script" path="res://typing/dialogue_end.gd" id="1_ommqh"]
[ext_resource type="FontFile" uid="uid://cy4apunlm3a4c" path="res://typing/superstar_memesbruh03.ttf" id="2_4yt1u"]

[node name="Dialogue" type="Node2D"]
script = ExtResource("1_ommqh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1544.0
offset_bottom = 842.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = 1348.0
offset_bottom = 758.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_4yt1u")
theme_override_font_sizes/font_size = 35
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
